--- a/app/src/main/res/layout/fragment_ground_detail_frgment.xml
+++ b/app/src/main/res/layout/fragment_ground_detail_frgment.xml
@@ -24,32 +24,43 @@
                 android:layout_height="@dimen/_120dp"
                 android:scaleType="fitXY" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:padding="@dimen/_5dp">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:textColor="@color/orange"
-                    android:textSize="@dimen/_12dp" />
-
-
-                <TextView
-                    android:id="@+id/status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/_5dp"
-                    android:background="@drawable/round_boder"
+                    android:orientation="horizontal"
                     android:padding="@dimen/_5dp"
-                    android:textAlignment="center"
-                    android:textColor="@color/green" />
+                    android:weightSum="1">
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".8"
+                        android:padding="@dimen/_3dp"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp" />
+
+
+                    <TextView
+                        android:id="@+id/status"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="center"
+                        android:layout_weight=".2"
+                        android:background="@drawable/round_boder_green"
+                        android:gravity="center"
+                        android:text="Avilable"
+                        android:textAlignment="center"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/uniqeId"
@@ -59,7 +70,7 @@
                     android:padding="@dimen/_3dp"
                     android:text=""
                     android:textSize="@dimen/_12dp" />
-            </RelativeLayout>
+            </LinearLayout>
 
 
             <android.support.v7.widget.CardView
@@ -80,10 +91,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/light_grey"
-                        android:padding="@dimen/_5dp"
-                        android:text="About Tournament"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12dp"
+                        android:padding="@dimen/_8dp"
+                        android:text="Ground Info"
+
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -115,6 +127,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -143,6 +156,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -171,6 +185,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -196,6 +211,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -222,6 +238,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -249,6 +266,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -276,6 +294,7 @@
                                 android:layout_weight=".7"
                                 android:padding="@dimen/_5dp"
                                 android:text=" "
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -303,6 +322,7 @@
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/_4dp"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp" />
 
 
@@ -353,7 +373,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_4dp"
+                    android:padding="@dimen/_8dp"
                     android:text="Sports"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -367,8 +387,7 @@
                         android:id="@+id/spoetsLayoyView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5dp" />
+                        android:orientation="horizontal" />
                 </HorizontalScrollView>
 
             </LinearLayout>
@@ -385,7 +404,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
+                    android:background="@color/light_grey"
+                    android:padding="@dimen/_8dp"
                     android:text="Free Services"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -416,7 +436,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
+                    android:background="@color/light_grey"
+                    android:padding="@dimen/_8dp"
                     android:text="Terms and Condition"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -430,7 +451,6 @@
                         android:id="@+id/termCondtionLayoutView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
                         android:orientation="vertical" />
                 </HorizontalScrollView>
 
@@ -448,7 +468,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
+                    android:background="@color/light_grey"
+                    android:padding="@dimen/_8dp"
                     android:text="Ground Staff"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
@@ -478,7 +499,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_5dp"
+                    android:background="@color/light_grey"
+                    android:padding="@dimen/_8dp"
                     android:text="Achievements"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12dp"
