--- a/app/src/main/res/layout/teams_row.xml
+++ b/app/src/main/res/layout/teams_row.xml
@@ -22,7 +22,7 @@
             <com.kredivation.aakhale.components.CircleImageView
                 android:id="@+id/imageView"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="@dimen/_80dp"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/_5dp"
                 android:layout_weight=".2"
@@ -124,7 +124,7 @@
                         android:layout_gravity="center"
                         android:padding="@dimen/_5dp"
                         android:text="WON:"
-                        android:textColor="@color/orange"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -134,9 +134,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@color/white"
                         android:padding="@dimen/_5dp"
                         android:text="25"
-                        android:textColor="@color/black"
+                        android:textColor="@color/orange"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -146,7 +147,7 @@
                         android:layout_gravity="center"
                         android:padding="@dimen/_5dp"
                         android:text="Matches:"
-                        android:textColor="@color/orange"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -156,9 +157,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@color/white"
                         android:padding="@dimen/_5dp"
                         android:text="99"
-                        android:textColor="@color/black"
+                        android:textColor="@color/orange"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -169,7 +171,7 @@
                         android:layout_gravity="center"
                         android:padding="@dimen/_5dp"
                         android:text="tournament:"
-                        android:textColor="@color/orange"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -179,9 +181,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@color/white"
                         android:padding="@dimen/_5dp"
                         android:text="5"
-                        android:textColor="@color/black"
+                        android:textColor="@color/orange"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -191,7 +194,7 @@
                         android:layout_gravity="center"
                         android:padding="@dimen/_5dp"
                         android:text="Challange:"
-                        android:textColor="@color/orange"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
@@ -201,9 +204,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@color/white"
                         android:padding="@dimen/_5dp"
                         android:text="0"
-                        android:textColor="@color/black"
+                        android:textColor="@color/orange"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
