--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -17,18 +17,16 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/_80dp"
             android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:layout_weight=".2" />
+            android:layout_weight=".2"
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5dp"
             android:layout_weight=".8"
-            android:orientation="vertical"
-            android:padding="@dimen/_5dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/name"
@@ -37,21 +35,20 @@
                 android:padding="@dimen/_3dp"
                 android:textSize="@dimen/_14dp"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/userId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_3dp"
-                android:textSize="@dimen/_12dp"
-                />
+                android:textSize="@dimen/_12dp" />
 
             <TextView
                 android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_3dp"
-                android:textSize="@dimen/_12dp"
-              />
+                android:textSize="@dimen/_12dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -64,17 +61,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:visibility="gone"
-                    android:textSize="@dimen/_12dp" />
+                    android:textSize="@dimen/_12dp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/moreGamesTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/orange"
-                    android:textSize="@dimen/_12dp"
                     android:text=""
-                    />
+                    android:textColor="@color/orange"
+                    android:textSize="@dimen/_12dp" />
 
 
             </LinearLayout>
