--- a/app/src/main/res/layout/fragment_team_detail.xml
+++ b/app/src/main/res/layout/fragment_team_detail.xml
@@ -71,13 +71,12 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/_60dp"
                         android:layout_gravity="center"
                         android:layout_weight=".2"
                         android:src="@drawable/tropy1" />
@@ -86,10 +85,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
                         android:layout_weight=".8"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5dp">
+                        android:orientation="horizontal">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -99,7 +96,7 @@
 
                             <TextView
                                 android:id="@+id/name"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Royal Chalanger"
                                 android:textSize="@dimen/_14dp"
@@ -107,7 +104,7 @@
 
                             <TextView
                                 android:id="@+id/userid"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text=""
                                 android:textSize="@dimen/_14dp"
@@ -169,8 +166,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".7"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
+                                android:textStyle="normal" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -193,8 +191,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".7"
                                 android:text=""
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
+                                android:textStyle="normal" />
                         </LinearLayout>
 
 
@@ -218,7 +217,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".7"
                                 android:text=""
-                                android:textSize="7dp" />
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_12dp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -242,7 +242,7 @@
                                 android:layout_weight=".7"
                                 android:text=""
                                 android:textSize="@dimen/_12dp"
-                                android:textStyle="bold" />
+                                android:textStyle="normal" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -254,12 +254,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp">
 
                     <com.kredivation.aakhale.components.ASTTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/_5dp"
                         android:text="Team Members"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12dp"
