--- a/app/src/main/res/layout/playerlist_item_row.xml
+++ b/app/src/main/res/layout/playerlist_item_row.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="@dimen/_40dp"
     android:orientation="vertical"
-    app:cardCornerRadius="@dimen/_5dp"
-    app:cardElevation="@dimen/_5dp"
     app:cardUseCompatPadding="true">
 
 
@@ -22,16 +19,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/nameTameInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_3dp"
                 android:layout_gravity="center"
+                android:layout_margin="@dimen/_3dp"
                 android:text="Text Umpire "
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
@@ -51,11 +48,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/_5dp"
+            android:layout_marginRight="@dimen/_10dp"
             android:gravity="center"
             android:text="Approved"
             android:textAllCaps="true"
             android:textColor="@color/green"
-            android:textSize="16sp" />
+            android:textSize="@dimen/_12dp" />
     </LinearLayout>
-</android.support.design.card.MaterialCardView>
+</LinearLayout>
