--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -14,14 +14,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/_5dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/_5dp"
             android:layout_weight=".2"
             android:src="@drawable/noimage" />
 
@@ -32,13 +32,37 @@
             android:orientation="vertical"
             android:padding="@dimen/_5dp">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
+                android:layout_marginTop="@dimen/_3dp"
+                android:orientation="horizontal"
+                android:padding="@dimen/_3dp">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight=".8"
+                    android:textSize="@dimen/_12dp"
+                    android:textStyle="bold" />
+
+                <com.kredivation.aakhale.components.ASTButton
+                    android:id="@+id/avilableTxt"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_20dp"
+                    android:layout_gravity="center"
+                    android:layout_weight=".2"
+                    android:background="@drawable/round_boder_green"
+                    android:text="OPEN"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_10dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/userId"
